syntax = "proto3";

option csharp_namespace = "{{project_name}}.{{project_type}}";

package greet;

service Greeter {
  rpc SayHello (HelloRequest) returns (HelloReply);
}

message HelloRequest {
  string name = 1;
}

message HelloReply {
  string message = 1;
}